[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.9"
cfg-if = "1.0"
bitflags = "1.3"
tock-registers = "0.8"
aarch64-cpu = "9.3"
buddy_system_allocator = "0.8"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", rev = "88e871a" }
rvm = { path = "../rvm" }
