[package]
name = "rvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
cfg-if = "1.0"
bitflags = "1.3"
bit_field = "0.10"
numeric-enum-macro = "0.2"
tock-registers = "0.8"
aarch64-cpu = "9.3"